--- a/APBioFinal/style.css
+++ b/APBioFinal/style.css
@@ -9,14 +9,14 @@ body {
 	font-family: 'Work Sans', sans-serif;
 }
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'Oleo Script Swash Caps', cursive;
+	font-family: 'Work Sans', sans-serif;
 }
 a {
 	outline: none !important;
 }
 /*-----Header & Banner Starts-------*/
 .navbar-brand {
-	font-family: 'Oleo Script Swash Caps', cursive;
+	font-family: 'Work Sans', sans-serif;
 	color: #ffffff;
 	font-size: 26px;
 }
@@ -129,7 +129,7 @@ a {
 
 .portfolio {
 	padding: 50px 0;
-	background-color: rgba(235, 213, 235, 0.26);
+	background-color: rgba(241, 241, 241, 0.26);
 	float: left;
 	width: 100%;
 }
@@ -173,161 +173,57 @@ a {
 
 
 /*-----About Starts-------*/
-.about {
+.about #about1{
 	padding: 50px 0px;
 	width: 100%;
-	float: left;
+	border-color: #000;
+	
 }
-.about h3 {
+.about #about1  {
 	margin-top: 0px;
 	margin-bottom: 50px;
-	border-bottom: 2px solid #EB233C;
-	display: inline-block;
+	border-bottom: 2px solid #4e181f;
+	
 	line-height: 35px;
 }
-.about-text p {
+.about-text #about1 p {
 	font-size: 15px;
 	font-weight: 300;
 }
-.counter-item h5 {
-	margin: 0px !important;
-	font-family: 'Work Sans', sans-serif;
-}
-.timer {
-	color: #EB233C;
-	font-size: 50px;
-	font-weight: 200;
-}
+
 .block {
 	padding-left: 0px !important;
 }
 /*-----About Ends-------*/
 
-
-/*-----Contact Starts-------*/
-.contact {
-	background-color: rgba(204, 204, 204, 0.15);
+/*-----About2 Starts-------*/
+.about #about2{
 	padding: 50px 0px;
-	float: left;
 	width: 100%;
+	border-color: #000;
+	
+	
+	background-color: #ffffff;
 }
-.contact h3 {
-	margin-top: 0px;
-	margin-bottom: 50px;
-	border-bottom: 2px solid #EB233C;
-	display: inline-block;
+.about #about2 {
+	
+	margin-bottom: 50%;
+	border-bottom: 2px solid  #4e181f;
+	
 	line-height: 35px;
 }
-.contact-form {
-	margin-top: 45px;
-}
-.form-control {
-	display: block;
-	width: 100%;
-	height: 34px;
-	padding: 6px 12px;
-	font-size: 14px;
-	line-height: 1.42857;
-	color: #242424;
-	background-color: transparent;
-	background-image: none;
-	border: none;
-	border-radius: 0px;
-	box-shadow: none;
-	transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
-	border-bottom: 2px solid #EB233C;
-	resize: none;
-	margin-top: 25px;
-}
-.form-control:hover, .form-control:focus {
-	box-shadow: none;
-	border-bottom: 2px solid #242424;
-}
-input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
-color: #242424 !important;
-}
- input:-moz-placeholder, textarea:-moz-placeholder { /* Firefox 18- */
-color: #242424 !important;
-}
- input::-moz-placeholder, textarea::-moz-placeholder {  /* Firefox 19+ */
-color: #242424 !important;
-}
- input:-ms-input-placeholder, textarea:-ms-input-placeholder {
-color: #242424 !important;
-}
-.contact-button {
-	border: none;
-	padding: 12px 35px;
-	color: #ffffff;
-	text-decoration: none;
-	display: inline-block;
-	border-radius: 25px 25px 25px 25px;
+.about-text  #about2{
 	font-size: 15px;
-	background-color: #EB233C;
-	margin-top: 30px;
-}
-.address {
-	color: #242424;
-	margin-top: 70px;
-}
-.address h4 {
-	color: #EB233C;
-	font-size: 22px;
-}
-.address p {
-	font-size: 16px;
-	font-weight: 500;
-}
-.email i {
-	color: #EB233C;
-	padding-right: 10px;
-	font-weight: 400;
-	font-size: 16px;
-}
-.email {
-	padding-top: 15px;
-}
-footer {
-	padding: 25px 0;
-	text-align: center;
-	width: 100%;
-	float: left;
-}
-footer span.copyright {
-	line-height: 40px;
-	text-transform: none;
-}
-footer ul.quicklinks {
-	margin-bottom: 0px;
-}
-footer ul.quicklinks a {
-	color: #EB233C;
-	line-height: 40px;
-	text-decoration: none;
-}
-ul.social-buttons {
-	margin-bottom: 0;
-}
-ul.social-buttons li a {
-	background-color: #222;
-	border-radius: 100%;
-	color: #fff;
-	display: block;
-	font-size: 20px;
-	height: 40px;
-	line-height: 40px;
-	outline: 0 none;
-	transition: all 0.3s ease 0s;
-	width: 40px;
-}
-ul.social-buttons li a:hover, ul.social-buttons li a:focus, ul.social-buttons li a:active {
-	background-color: #EB233C;
-}
-.btn:focus, .btn:active, .btn.active, .btn:active:focus {
-	outline: 0 none;
+	font-weight: 3;
+	font-stretch: expanded;
 }
 
-/*-----Contact Starts-------*/
+.block {
+	padding-left: 0px !important;
+}
+/*-----About2 Ends-------*/
+
+
 
 @media (min-width:0px) and (max-width: 600px) {
 .bg-overlay {
@@ -344,3 +240,32 @@ nav > li > a:focus, .nav > li > a:hover, .nav > li > a:focus, .nav > li.active >
 	padding: 50px 0px;
 }
 }
+#lion{
+	margin-left: 100%;
+	position: absolute;
+	height: 60%;
+	
+}
+#scan{
+margin-left: 100%;
+	position: absolute;
+	width: 95%;
+
+}
+#labels{
+margin-left: 100%;
+	position: absolute;
+	
+}
+#church{
+	margin-left: 100%;
+		position: absolute;
+		height: 300px;
+		
+	}
+	#soldeirs{
+		margin-left: 100%;
+			position: absolute;
+			
+			
+		}
